<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_castle_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_emoji_people_24"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_filter_vintage_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/baseline_airplanemode_active_24"
            android:title="@string/menu_sign_out" />
    </group>
</menu>