<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ubercus.Driver.ui.home.DriverHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_customer_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ubercus.Driver.ui.setting.DriverSettingFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_customer_setting" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ubercus.Driver.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>