<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".Customer.CustomerHomeActivity"
    android:gravity="bottom"
    app:umanoPanelHeight="220dp"
    app:umanoShadowHeight="20dp">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/type_car"
                    android:text="@string/type_car"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/type_motorbike"
                    android:text="@string/type_motorbike"/>

            </RadioGroup>

            <Button
                android:id="@+id/request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:layout_margin="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="Đặt xe ở đây nè ..."
                android:textSize="20dp">
            </Button>

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">

                <fragment android:id="@+id/autocomplete_fragment"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_add_24"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_choose_saved_place"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/baseline_grass_24"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/choose_a_saved_place"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/DriverInfo"
                android:layout_gravity="top"
                android:visibility="gone"
                android:background="@color/white">

                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:id="@+id/driverProfileImage"
                    android:padding="20sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="40sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/driverDestination"
                        android:paddingBottom="10sp"
                        android:text="Vị trí tại --"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/driverName"
                        android:paddingBottom="10sp"
                        android:paddingTop="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/driverPhone"
                        android:paddingBottom="10sp"
                        android:paddingTop="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/driverCar"
                        android:paddingBottom="10sp"
                        android:paddingTop="20sp"/>

            </LinearLayout>

        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>
